# spielesammlung

./: Cargo.toml  README.md  video.tex
.devcontainer/: devcontainer.json
.github/workflows/: rust-quality-gate.yml
game_core/: Cargo.toml
game_core/src/: lib.rs
games/chess/: Cargo.toml
games/chess/src/: draw.rs  engine.rs  lib.rs  meeples.rs  tests.rs
games/go/: Cargo.toml
games/go/src/: ai.rs  game.rs  lib.rs
games/kniffel/: Cargo.toml
games/kniffel/src/: bot.rs  kniffel.rs  lib.rs
games/minesweeper/: Cargo.toml
games/minesweeper/src/: lib.rs  minesweeper.rs  ui.rs
platform/: Cargo.toml
platform/src/: main.rs  main_dioxus.rs  multiplayer.rs  styles.css  websocketclient.rs
server/: Cargo.toml
server/src/: main.rs  protocol.rs  room.rs
