[package]
name = "platform"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "platform"
path = "src/main.rs"

[[bin]]
name = "platform-dioxus"
path = "src/main_dioxus.rs"

[dependencies]
game_core = { path = "../game_core" }
chess = { path = "../games/chess" }
go = { path = "../games/go" }
kniffel = { path = "../games/kniffel" }
minesweeper = { path = "../games/minesweeper" }

# alte ui
egui = "0.29.1"
eframe = "0.29.1"

# neue ui
dioxus = { version = "0.6", features = ["desktop"] }

