[package]
name = "platform"
version = "0.1.0"
edition = "2024"

[dependencies]
game_core = { path = "../game_core" }
chess = { path = "../games/chess" }
go = { path = "../games/go" }
kniffel = { path = "../games/kniffel" }
minesweeper = { path = "../games/minesweeper" }
egui = "0.29.1"
eframe = "0.29.1"
egui_extras = { version = "0.29.1", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
