[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[dependencies]
game_core = { path = "../../game_core" }
egui = "0.29.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"